fix notification not showing

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -687,6 +687,7 @@ $green: #74cc99;
   padding: 15px;
   color: white;
   left: 50%;
+  z-index: 1000;
   background: $green;
   font-size: 15px;
   border-bottom-right-radius: 5px;
